istio/dr-go-serve.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-serve
spec:
  host: go-serve
  subsets:
  - labels:
      version: v1
    name: subset-v1
  - labels:
      version: v2
    name: subset-v2
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
      localityLbSetting:
        enabled: true
#        distribute:
#        - from: ap-northeast/az2/*
#          to:
#            "ap-northeast/az2/*" : 90
#            "ap-northeast/az1/*" : 10
#        - from: ap-northeast/az1/*
#          to:
#            "ap-northeast/az2/*" : 90
#            "ap-northeast/az1/*" : 10
    outlierDetection:
      consecutive5xxErrors: 100
      interval: 1s
      baseEjectionTime: 3m
