istio/vs-go-serve.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-serve-vs
spec:
  hosts:
    - go-serve
  http:
    - route:
        - destination:
            host: go-serve
            subset: subset-v1
